Fixes to SDK
